pass ticket additional information on TICKET_ASSIGNED remove unnecessary query